--- a/hardlink/src/main/resources/application.properties
+++ b/hardlink/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8093
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.23.42:3306/hardlink
+spring.datasource.url=jdbc:mysql://mysql-db:3306/hardlink
 spring.datasource.username=root
 spring.datasource.password=K@ssen1225
