--- a/purchase/src/main/resources/application.properties
+++ b/purchase/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8094
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.20.116:3306/KASSEN
+spring.datasource.username=root
+spring.datasource.password=K@ssen1225
