--- a/purchase/src/main/resources/application.properties
+++ b/purchase/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8094
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.20.116:3306/KASSEN
+spring.datasource.url=jdbc:mysql://mysql-db:3306/KASSEN
 spring.datasource.username=root
 spring.datasource.password=K@ssen1225
 logging.level.org.apache.ibatis.logging.jdbc.BaseJdbcLogger=DEBUG
