--- a/purchase/src/main/resources/application.properties
+++ b/purchase/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=K@ssen1225
 logging.level.org.apache.ibatis.logging.jdbc.BaseJdbcLogger=DEBUG
 logging.level.com.baomidou=DEBUG
+logging.level.root=INFO
+logging.level.com.kassen.purchase=DEBUG
