--- a/request/src/main/resources/application.properties
+++ b/request/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=K@ssen1225
 logging.level.org.apache.ibatis.logging.jdbc.BaseJdbcLogger=DEBUG
 logging.level.com.baomidou=DEBUG
 logging.level.root=INFO
-logging.level.com.kassen.purchase=DEBUG
+logging.level.com.kassen.request=DEBUG
