--- a/hardlink/pom.xml
+++ b/hardlink/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hardlink</name>
 	<description>hardlink</description>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -36,6 +37,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-docker-compose</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
