--- a/hardlink/src/main/resources/application.properties
+++ b/hardlink/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8096
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
-logging.level.org.kassen.hardlink=INFO
+logging.level.org.kassen.hardlink=DEBUG
