--- a/hardlink/src/main/resources/application.properties
+++ b/hardlink/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8096
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.kassen.hardlink=DEBUG
+
+logging.file.name=/home/h-yu/logs/k_tools_hardlink.log
