--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "8096:8096"
     volumes:
       - /mnt:/mnt
-      - /home/h-yu/Documents/logs:/home/h-yu/logs
+      - /home/h-yu/logs:/logs
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - TZ=Asia/Tokyo
