--- a/rawToTif/src/main/resources/application.properties
+++ b/rawToTif/src/main/resources/application.properties
@@ -3,4 +3,6 @@ server.port=8097
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
-logging.level.org.kassen.hardlink=DEBUG
+logging.level.org.kassen.rawtotif=DEBUG
+
+logging.file.name=/logs/k_tools_rawtotif.log
